--- a/Linear_Algebra_for_CpE_2021_Prelim_Exam.ipynb
+++ b/Linear_Algebra_for_CpE_2021_Prelim_Exam.ipynb
@@ -80,7 +80,7 @@
         "        print('',e_month)\r\n",
         "\r\n",
         "        #Gradient Efficiency\r\n",
-        "        theta = np.arctan(e_monthy/(e_monthx - alpha))\r\n",
+        "        theta = np.arctan(e_monthy/(e_monthx + alpha))\r\n",
         "        theta = np.degrees(theta)\r\n",
         "\r\n",
         "        plt.title('Bebang\\'s Month Post Efficiency')\r\n",
